--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -113,6 +113,9 @@ figcaption
     background-color: #216189
   &-10
     background-color: #BAF6E4
+  &-11
+    backdrop-filter: blur(10px)
+    background-color: rgba(255, 255, 255, 0.521)
   
   &-white
     background-color: white !important
